# lycrex-auth

./: .gitignore  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: deploy.yml
_profile/: Cargo.toml
_profile/src/: config.rs  handlers.rs  main.rs  models.rs  utils.rs
_profile/src/templates/: login.html  profile.html
config/: app.toml  app.toml.example  default.toml  development.toml  production.toml  test.toml
db/: README.md
db/scripts/: init-db.sql
migrations/: 20230501000000_create_initial_tables.sql  20250426000000_create_initial_tables.sql  20250426000001_add_client_type.sql  20250427000000_add_casdoor_client_type.sql  20250501000000_add_lycrex_client_type.sql  20250501000001_change_avatar_field.sql
scripts/: apply-migrations.sh  init_db.sh  run_dev.sh  run_prod.sh  run_test.sh
src/: db.rs  main.rs
src/config/: mod.rs
src/errors/: mod.rs
src/handlers/: admin.rs  auth.rs  clients.rs  mod.rs  pages.rs  users.rs
src/middleware/: auth.rs  mod.rs
src/models/: authorization.rs  client.rs  login_stats.rs  mod.rs  token.rs  user.rs
src/models/oauth/: admin.rs  casdoor.rs  gitea.rs  interface.rs  lycrex.rs  mod.rs  openid.rs  test.rs
src/routes/: admin.rs  auth.rs  clients.rs  mod.rs  pages.rs  service.rs  users.rs
src/services/: auth.rs  client.rs  mod.rs  token.rs  user.rs
src/templates/: admin.html  admin_login.html  admin_users.html  api_docs.html  login.html  register.html  warning.html  welcome.html
src/templates/admin/: admin.html  admin_users.html
src/utils/: id.rs  jwt.rs  mod.rs  password.rs  random.rs  static_files.rs  templates.rs
static/css/: main.css
testclientserver/: Cargo.toml  README.md
testclientserver/src/: main.rs
