[package]
name = "lycrex-auth"
version = "0.0.1"
edition = "2021"
default-run = "lycrex-auth"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "config/**/*",
    "migrations/**/*",
    "sqlx-data.json",
    "README.md"
]

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-cors = "0.7.1"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.1.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["serde"] }
config = "0.15.0"
tokio = { version = "1.28.0", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "offline"] }
thiserror = "2.0.0"
anyhow = "1.0.71"
log = "0.4.17"
env_logger = "0.11.8"
bcrypt = "0.17.0"
url = { version = "2.3.1", features = ["serde"] }
reqwest = { version = "0.12.10", features = ["json"] }
futures = "0.3.31"
mime_guess = "2.0.4"
urlencoding = "2.1.3"
