[package]
name = "_profile"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.10", features = ["json", "multipart"] }
tokio = { version = "1.28.0", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.17"
dotenv = "0.15.0"
futures = "0.3.31"
base64 = "0.21.0"
