[package]
name = "testclientserver"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.32", features = ["full"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
url = "2.4"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] } 